@@ -171,7 +171,10 @@ void OvmsWebServer::HandleStatus(PageEntry_t& p, PageContext_t& c)
     "</div>"
     "<div class=\"col-md-6\">");
   
-  c.panel_start("primary", "Firmware");
+  c.panel_start("primary", "Module");
+  output = ExecuteCommand("boot status");
+  c.printf("<samp>%s</samp>", _html(output));
+  c.print("<hr>");
   output = ExecuteCommand("ota status");
   c.printf("<samp>%s</samp>", _html(output));
   c.panel_end();
@@ -264,32 +267,60 @@ void OvmsWebServer::HandleShell(PageEntry_t& p, PageContext_t& c)
       "$(\"#output\").scrollTop($(\"#output\").get(0).scrollHeight);"
     "}).trigger(\"window-resize\");"
     "$(\"#shellform\").on(\"submit\", function(event){"
-      "var data = $(this).serialize();"
-      "var command = $(\"#input-command\").val();"
-      "var output = $(\"#output\");"
-      "$.ajax({ \"type\": \"post\", \"url\": \"/api/execute\", \"data\": data,"
-        "\"timeout\": 5000,"
-        "\"beforeSend\": function(){"
-          "$(\"html\").addClass(\"loading\");"
-          "output.html(output.html() + \"<strong>OVMS&nbsp;&gt;&nbsp;</strong><kbd>\""
-            "+ $(\"<div/>\").text(command).html() + \"</kbd><br>\");"
-          "output.scrollTop(output.get(0).scrollHeight);"
-        "},"
-        "\"complete\": function(){"
-          "$(\"html\").removeClass(\"loading\");"
-        "},"
-        "\"success\": function(response){"
-          "output.html(output.html() + $(\"<div/>\").text(response).html());"
-          "output.scrollTop(output.get(0).scrollHeight);"
-        "},"
-        "\"error\": function(response, status, httperror){"
-          "var resptext = response.responseText || httperror || status;"
-          "output.html(output.html() + $(\"<div/>\").text(resptext).html());"
-          "output.scrollTop(output.get(0).scrollHeight);"
-        "},"
-      "});"
+      "if (!$(\"html\").hasClass(\"loading\")) {"
+        "var data = $(this).serialize();"
+        "var command = $(\"#input-command\").val();"
+        "var output = $(\"#output\");"
+        "var lastlen = 0, xhr, timeout;"
+        "var checkabort = function(){ if (xhr.readyState != 4) xhr.abort(\"timeout\"); };"
+        "xhr = $.ajax({ \"type\": \"post\", \"url\": \"/api/execute\", \"data\": data,"
+          "\"timeout\": 0,"
+          "\"beforeSend\": function(){"
+            "$(\"html\").addClass(\"loading\");"
+            "output.html(output.html() + \"<strong>OVMS&nbsp;&gt;&nbsp;</strong><kbd>\""
+              "+ $(\"<div/>\").text(command).html() + \"</kbd><br>\");"
+            "output.scrollTop(output.get(0).scrollHeight);"
+            "timeout = window.setTimeout(checkabort, 10000);"
+          "},"
+          "\"complete\": function(){"
+            "window.clearTimeout(timeout);"
+            "$(\"html\").removeClass(\"loading\");"
+          "},"
+          "\"xhrFields\": {"
+            "onprogress: function(e){"
+              "var response = e.currentTarget.response;"
+              "var addtext = response.substring(lastlen);"
+              "lastlen = response.length;"
+              "output.html(output.html() + $(\"<div/>\").text(addtext).html());"
+              "output.scrollTop(output.get(0).scrollHeight);"
+              "window.clearTimeout(timeout);"
+              "timeout = window.setTimeout(checkabort, 10000);"
+            "},"
+          "},"
+          "\"error\": function(response, status, httperror){"
+            "var resptext = response.responseText || httperror+\"\\n\" || status+\"\\n\";"
+            "output.html(output.html() + $(\"<div/>\").text(resptext).html());"
+            "output.scrollTop(output.get(0).scrollHeight);"
+          "},"
+        "});"
+        "if (shellhist.indexOf(command) >= 0)"
+          "shellhist.splice(shellhist.indexOf(command), 1);"
+        "shellhpos = shellhist.push(command) - 1;"
+      "}"
       "event.stopPropagation();"
       "return false;"
+    "});"
+    "$(\"#input-command\").on(\"keydown\", function(ev){"
+      "if (ev.key == \"ArrowUp\") {"
+        "shellhpos = (shellhist.length + shellhpos - 1) % shellhist.length;"
+        "$(this).val(shellhist[shellhpos]);"
+        "return false;"
+      "}"
+      "else if (ev.key == \"ArrowDown\") {"
+        "shellhpos = (shellhist.length + shellhpos + 1) % shellhist.length;"
+        "$(this).val(shellhist[shellhpos]);"
+        "return false;"
+      "}"
     "});"
     "$(\"#input-command\").focus();"
     "</script>");
